--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch==2.0.1
+torch==2.1.0
 transformers==4.33.0
 accelerate==0.21.0
 fschat==0.2.31
@@ -7,3 +7,4 @@ openai==0.28.0
 anthropic==0.5.0
 sentencepiece==0.1.99
 protobuf==3.19.0
+datasets
